[FIX] information 필드의 자료구조 -> List<String>으로 변화
인터페이스를 사용해 유연하게 대처할 수 있도록 변화.