@@ -10,8 +10,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 import static com.server.side.item.dto.ItemDto.fromEntity;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -36,7 +35,7 @@ public class ItemServiceImplTest {
                 .price(1000)
                 .category("상의")
                 .image("셔츠.png")
-                .information(new ArrayList<>(Arrays.asList("img1", "img2")))
+                .information(List.of("img1", "img2"))
                 .build();
 
         given(itemRepository.save(any(Item.class)))
@@ -50,7 +49,7 @@ public class ItemServiceImplTest {
                 .price(2000)
                 .category("하의")
                 .image("청바지.png")
-                .information(new ArrayList<>(Arrays.asList("img3", "img4")))
+                .information(List.of("img1", "img2"))
                 .build();
 
         assertEquals(fromEntity(request2.toEntity()), itemService.addItem(request2));
